# two-step-stress

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: psychopy_plan.md  two_step_stress_tutorial.ipynb
scripts/: run_analysis.py  sanity_check.py  smoke_test_screens.py
src/two_step_stress/: __init__.py  config.py
src/two_step_stress/analysis/: io.py  manipulation_check.py  plots.py  stay_probability.py
src/two_step_stress/io/: data_logging.py
src/two_step_stress/task/: instructions.py  nback.py  rewards.py  run_experiment.py  screens.py  transitions.py  trial.py
tests/: test_data_logging.py  test_nback.py  test_rewards.py  test_stay_probability.py  test_transitions.py
vignettes/: two_step_stress_tutorial.ipynb
